<?xml version="1.0"?>
<package format="3">
  <name>ros2_trt_pose</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ameykulkarni@nvidia.com">nvidia</maintainer>
  <license>TODO: License declaration</license>
  <exec_depend>pose_msgs</exec_depend>
  <exec_depend>image_tools</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
